--- a/LoanManagement.csproj
+++ b/LoanManagement.csproj
@@ -197,6 +197,12 @@
     <Compile Include="Database\Db.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Screens\ClientForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\ClientForm.Designer.cs">
+      <DependentUpon>ClientForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\Dahsboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -217,6 +223,9 @@
     <Compile Include="Screens\Simulator.Designer.cs">
       <DependentUpon>Simulator.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Screens\ClientForm.resx">
+      <DependentUpon>ClientForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\Dahsboard.resx">
       <DependentUpon>Dahsboard.cs</DependentUpon>
     </EmbeddedResource>
