--- a/LoanManagement.csproj
+++ b/LoanManagement.csproj
@@ -195,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\Db.cs" />
+    <Compile Include="Models\Client.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Screens\ClientForm.cs">
