--- a/LoanManagement.csproj
+++ b/LoanManagement.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Database\Db.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Screens\ClientForm.cs">
       <SubType>Form</SubType>
