--- a/LoanManagement.csproj
+++ b/LoanManagement.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Screens\ClientForm.cs">
       <SubType>Form</SubType>
     </Compile>
