--- a/LoanManagement.csproj
+++ b/LoanManagement.csproj
@@ -196,6 +196,7 @@
   <ItemGroup>
     <Compile Include="Database\Db.cs" />
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Loan.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
@@ -214,6 +215,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\LoanForm\Loan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\LoanForm\Loan.Designer.cs">
+      <DependentUpon>Loan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -242,6 +249,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Screens\LoanForm\Loan.resx">
+      <DependentUpon>Loan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -262,7 +272,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Screens\ClientForm\" />
+    <Folder Include="Screens\DashboardForm\" />
+    <Folder Include="Screens\SimulatorForm\" />
+    <Folder Include="Screens\UserForm\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Imgs\bg.jpg" />
   </ItemGroup>
